@@ -1,74 +1,74 @@
 {
-  "count": 0,
-  "uniques": 0,
+  "count": 1,
+  "uniques": 1,
   "views": [
     {
-      "timestamp": "2026-01-15T00:00:00Z",
+      "timestamp": "2026-02-03T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-16T00:00:00Z",
+      "timestamp": "2026-02-04T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-17T00:00:00Z",
+      "timestamp": "2026-02-05T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-18T00:00:00Z",
+      "timestamp": "2026-02-06T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-19T00:00:00Z",
+      "timestamp": "2026-02-07T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-20T00:00:00Z",
+      "timestamp": "2026-02-08T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-21T00:00:00Z",
+      "timestamp": "2026-02-09T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-22T00:00:00Z",
+      "timestamp": "2026-02-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2026-02-11T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-23T00:00:00Z",
+      "timestamp": "2026-02-12T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-24T00:00:00Z",
+      "timestamp": "2026-02-13T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-25T00:00:00Z",
+      "timestamp": "2026-02-14T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-26T00:00:00Z",
+      "timestamp": "2026-02-15T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-27T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-28T00:00:00Z",
+      "timestamp": "2026-02-16T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
