@@ -1,3 +1,12 @@
+2026-02-18T02:41:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22124341331 # 881
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
+* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28] / []
+
 2026-02-17T02:38:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22084021099 # 880
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
